fixed horizontally misaligned social icons on media node page.

--- a/src/sass/node/_node-media.scss
+++ b/src/sass/node/_node-media.scss
@@ -21,9 +21,7 @@
             &>a{
               overflow: visible;
               &:after{
-                top: auto;
-                left: auto;
-                position: relative;
+                top: -1px;
               }
             }
           }
